default settings changed

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
 
   <select class="watermark" id="watermark">
-    <option value="" disabled>Select a watermark</option>
+    <option value="">Select a watermark</option>
   </select>
 
   <h2><label for="credit">Credit</label></h2>
